--- a/src/App.css
+++ b/src/App.css
@@ -303,11 +303,20 @@ ul {
 /**************** Cities ********************/
 
 .carousel-wrapper {
-    position: relative;
+    /* position: relative; */
     margin-top: 2rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .carousel {
+    width: 100%;
+}
+
+.carousel-parent {
     width: 100%;
     align-items: center;
     justify-content: center;
@@ -324,6 +333,8 @@ ul {
     justify-content: center;
     justify-items: center;
     align-items: center;
+    /* margin-left: auto;
+    margin-right: auto; */
 }
 
 .carousel-img h3 {
@@ -334,10 +345,16 @@ ul {
     letter-spacing: 0.4rem;
     display: flex;
     align-items: flex-start;
-    margin-left: 1rem;
+    /* margin-left: 1rem; */
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin: 0;
+    line-height: 4.2rem;
 }
 
 .carousel-img {
+    position: relative;
     height: 40rem;
     width: 40rem;
     background-size: cover;
@@ -346,6 +363,8 @@ ul {
     align-items: center;
     border: 1rem solid #ffffff;
     box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.25);
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .img-1 {
@@ -455,6 +474,13 @@ span {
     align-items: center;
 }
 
+.card-parent {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+}
+
 .circle {
     border-radius: 50%;
     background-color: #ffffff;
@@ -463,6 +489,9 @@ span {
     width: 8rem;
     margin-bottom: 1rem;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .circle img {
